# databaseManagementSystem

./: Cargo.toml
migrations/2020-02-11-221347_create_users/: up.sql
migrations/2020-02-13-142138_create_appointments/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
tests/: test_db.rs
