[package]
name = "hospital_manager"
version = "0.1.0"
authors = ["spiderjako <lyudmil_danailov@abv.bg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
rouille = "3.0.0"